past games contains event log
